[gd_scene load_steps=9 format=3 uid="uid://d2xno6jyg2rpn"]

[ext_resource type="Script" path="res://addons/panda_time/resources/dock/dock.gd" id="1_c7ldf"]
[ext_resource type="AudioStream" uid="uid://dgwgj5ew4swue" path="res://addons/panda_time/sounds/pageflip.mp3" id="2_7f2xk"]
[ext_resource type="Texture2D" uid="uid://dqj8pfboaowwf" path="res://addons/panda_time/resources/images/pause.png" id="2_inqla"]
[ext_resource type="Texture2D" uid="uid://d0g747ffr5rey" path="res://addons/panda_time/resources/images/skip.png" id="2_vib33"]
[ext_resource type="AudioStream" uid="uid://gymxg0u7pfwr" path="res://addons/panda_time/sounds/scribble_long_strokes.mp3" id="3_0sh1u"]
[ext_resource type="Script" path="res://addons/panda_time/resources/dock/dock_btn_colorconfig.gd" id="3_2ldr0"]
[ext_resource type="AudioStream" uid="uid://b1iivgtmgqk4l" path="res://addons/panda_time/sounds/pencil_check_mark.mp3" id="4_avukd"]
[ext_resource type="Texture2D" uid="uid://cmseiore71f7p" path="res://addons/panda_time/resources/images/settings.png" id="5_gs5nu"]

[node name="PandaTimeDock" type="Control"]
custom_minimum_size = Vector2(100, 58)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7ldf")

[node name="SessionTimer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="SkipButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.337255, 0.619608, 1, 1)
texture_filter = 6
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_vib33")
texture_pressed = ExtResource("2_vib33")
texture_hover = ExtResource("2_vib33")
texture_disabled = ExtResource("2_vib33")
texture_focused = ExtResource("2_vib33")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_2ldr0")

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StopButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.337255, 0.619608, 1, 1)
texture_filter = 6
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("2_inqla")
texture_pressed = ExtResource("2_inqla")
texture_hover = ExtResource("2_inqla")
texture_disabled = ExtResource("2_inqla")
texture_focused = ExtResource("2_inqla")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_2ldr0")

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.337255, 0.619608, 1, 1)
texture_filter = 6
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_gs5nu")
texture_pressed = ExtResource("5_gs5nu")
texture_hover = ExtResource("5_gs5nu")
texture_disabled = ExtResource("5_gs5nu")
texture_focused = ExtResource("5_gs5nu")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_2ldr0")

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_7f2xk")
volume_db = 3.0
pitch_scale = 1.15

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_0sh1u")
volume_db = -10.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_avukd")
volume_db = -18.0
pitch_scale = 0.88

[connection signal="timeout" from="SessionTimer" to="." method="_on_break_timer_timeout"]
